--- a/wp-content/themes/saatchi/style.css
+++ b/wp-content/themes/saatchi/style.css
@@ -935,6 +935,68 @@ body,
 input,
 button {
   color: #1c1c1c;
-  font-family: Verdana, sans-serif;
+  font-family:'Times New Roman',Verdana, sans-serif;
   font-weight: normal;
 }
+.full-width{padding:0;}
+.site-content .full-width{max-width:100%;padding:0;}
+.home-content {}
+.content-container{max-width:1300px;margin:0 auto;}
+/*======homepage========*/
+.home-content .part1{text-align:center;}
+.home-content .part1 h2{font-size:42px;}
+.home-content .part1 h3{margin-bottom:26px;font-size:36px;font-weight:normal;line-height:42px;text-transform:uppercase;}
+.home-content .part1 h3 img{display:inline;}
+.home-content .part1 h3 .sound{padding-right:15px;color:#fb4d40}
+.home-content .part1 h3 .ideas{padding-left:15px;color:#2295d2}
+.home-content .part1 h4{margin-top:0;margin-bottom:35px;font-size:42px;font-weight:normal;}
+.home-content .part2{background:#fff;padding:30px 0 70px;}
+.home-content .part2 img{margin:0 auto;}
+.home-content .part3{background:url(images/part3-bg.jpg) center top no-repeat;height:196px;line-height:196px;text-align:center;color:#fff;font-size:42px;}
+.home-content .part4 .item-container{position:relative;min-height:850px;}
+.home-content .part4 .item-container::after{ border-color: #f7f7f7 transparent transparent;border-image: none;border-style: solid;border-width: 40px;content: "";margin: 0 0 0 -20px;position: absolute;left:50%;top: 100%;}
+.home-content .part4 .arrow{position:absolute;left:110px;top:245px;}
+.home-content .part4 .arrow04{top:200px;left:1040px;}
+.home-content .part4 .arrow02{top:240px;left:508px;}
+.home-content .part4 .arrow03{top:340px;left:786px;}
+.home-content .part4 .item{position:absolute;left:35px;top:413px;width:228px;height:228px;text-align:center;color:#fff;}
+.home-content .part4 .item2{left:250px;top:150px;}
+.home-content .part4 .item3{left:532px;top:485px;}
+.home-content .part4 .item4{left:805px;top:84px;}
+.home-content .part4 .item5{left:1063px;top:398px;}
+.home-content .part4 .popup{position:absolute;padding:45px;display:none;left:-54px;top:324px;z-index:9;box-shadow: 0px 0px 5px #ccc;-webkit-border-radius:203px;-moz-border-radius: 203px;border-radius:203px;width:406px;height:406px;background:#fff;color:#838383;font-size:14px;font-family:Verdana}
+.home-content .part4 .popup2{left:161px;top:61px;}
+.home-content .part4 .popup3{left:443px;top:396px;}
+.home-content .part4 .popup4{left:716px;top:-5px;}
+.home-content .part4 .popup5{left:974px;top:309px;}
+.home-content .part4 .popup img{margin:0 auto;}
+.home-content .part4 .popup a	{background: #000;color: #fff;display: block;font-size: 16px;font-weight: bold;height: 40px;line-height: 40px;margin: 70px auto 0;padding-left: 1px;text-align: center;text-decoration: none;width: 176px;}
+.home-content .part4 .popup1 a,
+.home-content .part4 .popup2 a{width:150px;}
+.home-content .part4 .item img{margin:0 auto;padding-top:54px;}
+.home-content .part4 .item2 img{padding-top:30px;}
+.home-content .part4 .item3 img{padding-top:32px;}
+.home-content .part4 .item4 img{padding-top:60px;}
+.home-content .part4 .item5 img{padding-top:35px;}
+.home-content .part4 .circle-outer{padding:8px;width:100%;height:100%;box-sizing:border-box;border:1px solid #838383;-webkit-border-radius:114px;-moz-border-radius: 114px;border-radius:114px;overflow: hidden;}
+.home-content .part4 .circle-inner{background:#838383;box-sizing:border-box;width:100%;height:100%;-webkit-border-radius:105px;-moz-border-radius: 105px;border-radius:105px;overflow: hidden;}
+.home-content .part4 .item.over .circle-outer{border:0 none;}
+.home-content .part4 .item.over .circle-inner{background:none;}
+.home-content .part5{padding-top:90px;background:#fff;}
+.home-content .part5 ul{list-style:none;margin:0;padding:0;}
+.home-content .part5 ul li{float:left;margin:0 1% 0 0;width:32%;border-top: 0.3em solid #2295d2;}
+
+.home-content .part6{padding-top:20px;background:#fff;}
+.home-content .part6 h4{margin-bottom:10px;font-size:28px;}
+.home-content .media-boxes .media-box{width:32% !important;margin:5px 1% 5px 0;}
+.home-content .media-box header{height:9.5em;border-top-color:#fb493c}
+.home-content .media-box header h5{color:#fb493c;font-size:0.75em;font-weight:bold;}
+
+
+
+
+
+
+
+
+
