--- a/wp-content/themes/saatchi/style.css
+++ b/wp-content/themes/saatchi/style.css
@@ -935,17 +935,16 @@ body,
 input,
 button {
   color: #1c1c1c;
-  font-family:'Times New Roman',Verdana, sans-serif;
+  font-family:Verdana, sans-serif;
   font-weight: normal;
 }
 .sub-nav { width:100%;}
 .full-width{padding:0;overflow:hidden;}
-.site-content .full-width{max-width:100%;padding:0;}
-.home-content {}
+.page-parent .site-content .full-width{max-width:100%;padding:0;}
 .content-container{max-width:1300px;margin:0 auto;}
 .clearer:after{display:block; content:"."; clear:both; font-size:0; line-height:0; height:0; overflow:hidden;}
 /*======homepage========*/
-.home-content .part1{text-align:center;}
+.home-content .part1{text-align:center;font-family:'Times New Roman'}
 .home-content .part1 h2{font-size:2.625em;}
 .home-content .part1 h3{margin-bottom:0.72em;font-size:2.25em;font-weight:normal;line-height:1.167em;text-transform:uppercase;}
 .home-content .part1 h3 img{display:inline;}
@@ -1021,10 +1020,14 @@ button {
 .home-content .part7 li .post-on{margin-bottom:0;color:#fb493c;font-size:0.75em;font-weight:700;}
 .home-content .part7 li .intro{height:7.8em;overflow:hidden;color:#676767;font-size:0.875em;}
 
+.home-content .part7 li .intro,
+.media-box header .intro{max-width:100%;word-break:break-all;word-wrap:break-word;}
+
+.media-box header{border-top-color:#fb493c}
 .home-content .media-boxes{margin:0;}
 .home-content .media-boxes .media-box{margin:5px 11px 0 0;}
 .home-content .media-boxes .media-box:last-child{margin-right:0;}
-.home-content .media-box header{height:9.5em;border-top-color:#fb493c}
+.home-content .media-box header{height:9.5em;}
 .home-content .media-box header h5{color:#fb493c;font-size:0.75em;font-weight:bold;}
 
 .site-footer{background:none;border:0 none;height:auto;}
@@ -1067,6 +1070,8 @@ button {
 .site-nav ul li.current-menu-parent a, 
 .site-nav ul li.current-menu-parent a:hover, 
 .site-nav ul li.current-menu-parent a:focus {background: #000 none repeat scroll 0 0;border-left: 1px solid #000;box-shadow: -2px 0 0 -1px #232323, 2px 0 0 -1px #232323;color:#fff;}
+
+.page-child .site-content{background:#fff;}
 
 @media only screen and (max-width: 1299px) {
   .part4-notouch{display:none;}
@@ -1164,15 +1169,11 @@ button {
 }
 @media only screen and (max-width: 375px) {
 	.events-slideshow .prev,
-	.events-slideshow .next{top:37%}
-
-	
+	.events-slideshow .next{top:37%}	
 }
-
-
-
-
-
+@media only screen and (max-width: 320px) {
+		.media-boxes .media-box{max-width:100%;margin:5px 0;}
+}
 
 
 
