--- a/wp-content/themes/saatchi/style.css
+++ b/wp-content/themes/saatchi/style.css
@@ -965,7 +965,7 @@ button {
 .home-content .part4 .item3{left:532px;top:485px;}
 .home-content .part4 .item4{left:805px;top:84px;}
 .home-content .part4 .item5{left:1063px;top:398px;}
-.home-content .part4 .popup{position:absolute;padding:45px;display:none;left:-54px;top:324px;z-index:9;box-shadow: 0px 0px 5px #ccc;-webkit-border-radius:203px;-moz-border-radius: 203px;border-radius:203px;width:406px;height:406px;background:#fff;color:#838383;font-size:14px;font-family:Verdana}
+.home-content .part4 .popup{position:absolute;padding:45px;display:none;left:-54px;top:324px;z-index:9;box-shadow: 0px 0px 5px #ccc;-webkit-border-radius:203px;-moz-border-radius: 203px;border-radius:203px;width:406px;height:406px;background:#fff;color:#838383;font-size:14px;}
 .home-content .part4 .popup2{left:161px;top:61px;}
 .home-content .part4 .popup3{left:443px;top:396px;}
 .home-content .part4 .popup4{left:716px;top:-5px;}
@@ -989,11 +989,11 @@ button {
 .home-content .part5 ul li{float:left;margin:0 11px 1.5em 0;width:32%;border-top: 0.3em solid #2295d2;}
 .home-content .part5 ul li.item3,
 .home-content .part5 ul li.item6{margin-right:0;}
-.home-content .part5 li a.more{position:absolute;bottom:2.2em;left:50%;margin-left:-73px;width:146px;height:42px;line-height:42px;text-align:center;background:#d4d4d4;font-size:16px;font-weight:bold;font-family:Verdana;color:#1c1c1c;text-decoration:none;}
+.home-content .part5 li a.more{position:absolute;bottom:2.2em;left:50%;margin-left:-73px;width:146px;height:42px;line-height:42px;text-align:center;background:#d4d4d4;font-size:16px;font-weight:bold;;color:#1c1c1c;text-decoration:none;}
 .home-content .part5 dl{position:relative;padding:0 0 10px;min-height:530px;background:#f7f7f7;}
 .home-content .part5 dl dt{position:relative;padding:0 0 1em 0.8em;background:#fff;font-size:1.75em;font-weight:400;}
 .home-content .part5 dl dt::after{ border-color: #fff transparent transparent;border-image: none;border-style: solid;border-width: 0.3em;content: "";position: absolute;top: 100%;left:1em;}
-.home-content .part5 dl dd{margin:1.5em 0 0;padding-left:0.8em;line-height:1.445em;font-size:1.125em;font-family:Verdana;}
+.home-content .part5 dl dd{margin:1.5em 0 0;padding-left:0.8em;line-height:1.445em;font-size:1.125em;;}
 .home-content .part5 dl dd .arrow-icon{padding-right:20px;background:url(images/arrow-close.png)100% 70% no-repeat;}
 .home-content .part5 dl dd img{display:inline;padding-top:0px;padding-right:10px;}
 .home-content .part5  li.item1 dd.fst img,
@@ -1015,7 +1015,7 @@ button {
 .home-content .part7 li h2{font-size: 1.125em;font-weight: 400;height: 2.6em;line-height: 1.3em;margin: 0.5em 0 0;max-width: 85%;overflow:hidden;}
 .home-content .part7 li h3{margin-top:0.5em;font-size:0.875em;padding-bottom:1.5em; border-bottom: 1px solid #ddd;}
 .home-content .part7 li header::after{border-color: #fff transparent transparent;border-image: none;border-style: solid;border-width: 0.8em;content: "";position: absolute;top: 100%;left:2em;}
-.home-content .part7 li .content{padding:10px 25px 40px;background:#f7f7f7;font-family:Verdana;}
+.home-content .part7 li .content{padding:10px 25px 40px;background:#f7f7f7;;}
 .home-content .part7 li .join{display:block;margin:3.437em auto 0;width:150px;height:40px;line-height:40px;background:#000;text-align:center;color:#fff;font-size:1em;font-weight:bold;text-decoration:none;}
 .home-content .part7 li .post-on{margin-bottom:0;color:#fb493c;font-size:0.75em;font-weight:700;}
 .home-content .part7 li .intro{height:7.8em;overflow:hidden;color:#676767;font-size:0.875em;}
@@ -1035,7 +1035,7 @@ button {
 .footer-middle a{text-decoration:none;}
 .footer-middle .blog{padding-right:1.5em;color:#fb4d40}
 .footer-middle .event{padding-left:1.5em;color:#2295d2}
-.footer-top{font-family:Verdana;}
+.footer-top{;}
 .footer-top dl{float:left;margin:0 11px 0 0;}
 .footer-top dl.last{margin-right:0;}
 .footer-top dl.last dd{width:230px}
@@ -1052,14 +1052,14 @@ button {
 #contact-us input{display:block;margin-bottom:0.8em;width:87%;}
 #contact-us textarea{resize:none;width:87%;}
 #contact-us .defaultText{position:absolute;margin:0;top:10em;left:4px;z-index:100;color:#afadad;font-size:1em;}
-#contact-us button{margin-top:1em;padding: 0.5em 1.2em;background:#e5e5e5;border:0 none;box-shadow:none;text-shadow: none;-webkit-appearance:none;font-family:Verdana;font-size:1em;font-weight:700;}
+#contact-us button{margin-top:1em;padding: 0.5em 1.2em;background:#e5e5e5;border:0 none;box-shadow:none;text-shadow: none;-webkit-appearance:none;;font-size:1em;font-weight:700;}
 .site-footer .legal-nav ul{margin:0;}
 
 .part4-touch{display:none;background:#fff;}
 .part4-touch .item .title{margin:0;padding:0 1em;height:6em;line-height:6em;border-bottom:1px solid #dfdfdf;background:url(images/arrow-close-touch.png) 98% 50% no-repeat;color:#838383;}
 .part4-touch .item .title.over{background-image:url(images/arrow-open-touch.png)}
 .part4-touch img{padding:1.1875em 1.25em 0 0;display:inline;}
-.part4-touch .popup{display:none;padding:0.5em 0 2em;border-bottom:1px solid #dfdfdf;color:#838383;font-size:0.875em;font-family:Verdana}
+.part4-touch .popup{display:none;padding:0.5em 0 2em;border-bottom:1px solid #dfdfdf;color:#838383;font-size:0.875em;}
 .part4-touch .popup a{background: #000;color: #fff;display: block;font-size:1em;font-weight: bold;height: 2.5em;line-height: 2.5em;margin:1.375em 0 0;text-align: center;text-decoration: none;width: 11em;}
 
 .sub-nav{display:none;}
@@ -1173,6 +1173,7 @@ button {
 }
 @media only screen and (max-width: 320px) {
 		.media-boxes .media-box{max-width:100%;margin:5px 0;}
+		.home-content .part3{height:10em;line-height:10em;font-size:1em;}
 }
 
 
