--- a/wp-content/themes/saatchi/style.css
+++ b/wp-content/themes/saatchi/style.css
@@ -935,44 +935,43 @@ body,
 input,
 button {
   color: #1c1c1c;
-  font-family:'Times New Roman',Verdana, sans-serif;
+  font-family:Verdana, sans-serif;
   font-weight: normal;
 }
 .sub-nav { width:100%;}
-.full-width{padding:0;}
-.site-content .full-width{max-width:100%;padding:0;}
-.home-content {}
+.full-width{padding:0;overflow:hidden;}
+.page-parent .site-content .full-width{max-width:100%;padding:0;}
 .content-container{max-width:1300px;margin:0 auto;}
 .clearer:after{display:block; content:"."; clear:both; font-size:0; line-height:0; height:0; overflow:hidden;}
 /*======homepage========*/
-.home-content .part1{text-align:center;}
-.home-content .part1 h2{font-size:42px;}
-.home-content .part1 h3{margin-bottom:26px;font-size:36px;font-weight:normal;line-height:42px;text-transform:uppercase;}
+.home-content .part1{text-align:center;font-family:'Times New Roman'}
+.home-content .part1 h2{font-size:2.625em;}
+.home-content .part1 h3{margin-bottom:0.72em;font-size:2.25em;font-weight:normal;line-height:1.167em;text-transform:uppercase;}
 .home-content .part1 h3 img{display:inline;}
 .home-content .part1 h3 .sound{padding-right:15px;color:#fb4d40}
 .home-content .part1 h3 .ideas{padding-left:15px;color:#2295d2}
-.home-content .part1 h4{margin-top:0;margin-bottom:35px;font-size:42px;font-weight:normal;}
+.home-content .part1 h4{margin-top:0;margin-bottom:0.83em;font-size:2.625em;font-weight:normal;}
 .home-content .part2{background:#fff;padding:30px 0 70px;}
 .home-content .part2 img{margin:0 auto;}
-.home-content .part3{background:url(images/part3-bg.jpg) center top no-repeat;height:196px;line-height:196px;text-align:center;color:#fff;font-size:42px;}
+.home-content .part3{background:url(images/part3-bg.jpg) center top no-repeat;height:196px;line-height:196px;text-align:center;color:#fff;font-size:2.625em;}
 .home-content .part4 .item-container{position:relative;min-height:850px;}
 .home-content .part4 .item-container::after{ border-color: #f7f7f7 transparent transparent;border-image: none;border-style: solid;border-width: 40px;content: "";margin: 0 0 0 -20px;position: absolute;left:50%;top: 100%;}
 .home-content .part4 .arrow{position:absolute;left:110px;top:245px;}
 .home-content .part4 .arrow04{top:200px;left:1040px;}
 .home-content .part4 .arrow02{top:240px;left:508px;}
 .home-content .part4 .arrow03{top:340px;left:786px;}
-.home-content .part4 .item{position:absolute;left:35px;top:413px;width:228px;height:228px;text-align:center;color:#fff;}
+.home-content .part4 .item{position:absolute;left:35px;top:413px;width:14.25em;height:14.25em;text-align:center;color:#fff;cursor:pointer;}
 .home-content .part4 .item2{left:250px;top:150px;}
 .home-content .part4 .item3{left:532px;top:485px;}
 .home-content .part4 .item4{left:805px;top:84px;}
 .home-content .part4 .item5{left:1063px;top:398px;}
-.home-content .part4 .popup{position:absolute;padding:45px;display:none;left:-54px;top:324px;z-index:9;box-shadow: 0px 0px 5px #ccc;-webkit-border-radius:203px;-moz-border-radius: 203px;border-radius:203px;width:406px;height:406px;background:#fff;color:#838383;font-size:14px;font-family:Verdana}
+.home-content .part4 .popup{position:absolute;padding:45px;display:none;left:-54px;top:324px;z-index:9;box-shadow: 0px 0px 5px #ccc;-webkit-border-radius:203px;-moz-border-radius: 203px;border-radius:203px;width:406px;height:406px;background:#fff;color:#838383;font-size:14px;}
 .home-content .part4 .popup2{left:161px;top:61px;}
 .home-content .part4 .popup3{left:443px;top:396px;}
 .home-content .part4 .popup4{left:716px;top:-5px;}
 .home-content .part4 .popup5{left:974px;top:309px;}
 .home-content .part4 .popup img{margin:0 auto;}
-.home-content .part4 .popup a	{background: #000;color: #fff;display: block;font-size: 16px;font-weight: bold;height: 40px;line-height: 40px;margin: 70px auto 0;padding-left: 1px;text-align: center;text-decoration: none;width: 176px;}
+.home-content .part4 .popup a	{background: #000;color: #fff;display: block;font-size:1em;font-weight: bold;height: 2.5em;line-height: 2.5em;margin:4.375em auto 0;text-align: center;text-decoration: none;width: 11em;}
 .home-content .part4 .popup1 a,
 .home-content .part4 .popup2 a{width:150px;}
 .home-content .part4 .item img{margin:0 auto;padding-top:54px;}
@@ -980,21 +979,21 @@ button {
 .home-content .part4 .item3 img{padding-top:32px;}
 .home-content .part4 .item4 img{padding-top:60px;}
 .home-content .part4 .item5 img{padding-top:35px;}
-.home-content .part4 .circle-outer{padding:8px;width:100%;height:100%;box-sizing:border-box;border:1px solid #838383;-webkit-border-radius:114px;-moz-border-radius: 114px;border-radius:114px;overflow: hidden;}
-.home-content .part4 .circle-inner{background:#838383;box-sizing:border-box;width:100%;height:100%;-webkit-border-radius:105px;-moz-border-radius: 105px;border-radius:105px;overflow: hidden;}
+.home-content .part4 .circle-outer{padding:0.5em;width:100%;height:100%;box-sizing:border-box;border:1px solid #838383;-webkit-border-radius:7.125em;-moz-border-radius: 7.125em;border-radius:7.125em;overflow: hidden;}
+.home-content .part4 .circle-inner{background:#838383;box-sizing:border-box;width:100%;height:100%;-webkit-border-radius:6.563em;-moz-border-radius: 6.563em;border-radius:6.563em;overflow: hidden;}
 .home-content .part4 .item.over .circle-outer{border:0 none;}
 .home-content .part4 .item.over .circle-inner{background:none;}
-.home-content .part5{padding-top:90px;background:#fff;}
+.home-content .part5{padding-top:5.625em;background:#fff;}
 .home-content .part5 ul,
 .home-content .part7 ul{list-style:none;margin:0;padding:0;}
 .home-content .part5 ul li{float:left;margin:0 11px 1.5em 0;width:32%;border-top: 0.3em solid #2295d2;}
 .home-content .part5 ul li.item3,
 .home-content .part5 ul li.item6{margin-right:0;}
-.home-content .part5 li a.more{position:absolute;bottom:2.2em;left:50%;margin-left:-73px;width:146px;height:42px;line-height:42px;text-align:center;background:#d4d4d4;font-size:16px;font-weight:bold;font-family:Verdana;color:#1c1c1c;text-decoration:none;}
+.home-content .part5 li a.more{position:absolute;bottom:2.2em;left:50%;margin-left:-73px;width:146px;height:42px;line-height:42px;text-align:center;background:#d4d4d4;font-size:16px;font-weight:bold;;color:#1c1c1c;text-decoration:none;}
 .home-content .part5 dl{position:relative;padding:0 0 10px;min-height:530px;background:#f7f7f7;}
-.home-content .part5 dl dt{position:relative;padding:0 0 1em 0.8em;background:#fff;font-size:28px;font-weight:400;}
+.home-content .part5 dl dt{position:relative;padding:0 0 1em 0.8em;background:#fff;font-size:1.75em;font-weight:400;}
 .home-content .part5 dl dt::after{ border-color: #fff transparent transparent;border-image: none;border-style: solid;border-width: 0.3em;content: "";position: absolute;top: 100%;left:1em;}
-.home-content .part5 dl dd{margin:1.5em 0 0;padding-left:0.8em;line-height:26px;font-size:18px;font-family:Verdana;}
+.home-content .part5 dl dd{margin:1.5em 0 0;padding-left:0.8em;line-height:1.445em;font-size:1.125em;;}
 .home-content .part5 dl dd .arrow-icon{padding-right:20px;background:url(images/arrow-close.png)100% 70% no-repeat;}
 .home-content .part5 dl dd img{display:inline;padding-top:0px;padding-right:10px;}
 .home-content .part5  li.item1 dd.fst img,
@@ -1007,24 +1006,28 @@ button {
 .home-content .part6{padding-top:20px;background:#fff;}
 
 .home-content .part6 h4,
-.home-content .part7 h4{margin:0px 0 10px;font-size:28px;}
+.home-content .part7 h4{margin:0px 0 10px;font-size:1.75em;}
 
 .home-content .part7{padding-top:10px;background:#fff}
-.home-content .part7 li{float:left;padding-top:20px;margin:0 11px 1.5em 0;width:32%;border-top: 0.3em solid #fb493c;}
+.home-content .part7 li{float:left;padding-top:20px;margin:0 11px 1.5em 0;border-top: 0.3em solid #fb493c;}
 .home-content .part7 li.item3{margin-right:0;}
 .home-content .part7 li header {position:relative;padding:0px 25px;height:4.6em;}
 .home-content .part7 li h2{font-size: 1.125em;font-weight: 400;height: 2.6em;line-height: 1.3em;margin: 0.5em 0 0;max-width: 85%;overflow:hidden;}
 .home-content .part7 li h3{margin-top:0.5em;font-size:0.875em;padding-bottom:1.5em; border-bottom: 1px solid #ddd;}
 .home-content .part7 li header::after{border-color: #fff transparent transparent;border-image: none;border-style: solid;border-width: 0.8em;content: "";position: absolute;top: 100%;left:2em;}
-.home-content .part7 li .content{padding:10px 25px 40px;background:#f7f7f7;font-family:Verdana;}
-.home-content .part7 li .join{display:block;margin:55px auto 0;width:150px;height:40px;line-height:40px;background:#000;text-align:center;color:#fff;font-size:1em;font-weight:bold;text-decoration:none;}
+.home-content .part7 li .content{padding:10px 25px 40px;background:#f7f7f7;;}
+.home-content .part7 li .join{display:block;margin:3.437em auto 0;width:150px;height:40px;line-height:40px;background:#000;text-align:center;color:#fff;font-size:1em;font-weight:bold;text-decoration:none;}
 .home-content .part7 li .post-on{margin-bottom:0;color:#fb493c;font-size:0.75em;font-weight:700;}
-.home-content .part7 li .intro{height:7.9em;overflow:hidden;color:#676767;font-size:0.875em;}
+.home-content .part7 li .intro{height:7.8em;overflow:hidden;color:#676767;font-size:0.875em;}
 
+.home-content .part7 li .intro,
+.media-box header .intro{max-width:100%;word-break:break-all;word-wrap:break-word;}
+
+.media-box header{border-top-color:#fb493c}
 .home-content .media-boxes{margin:0;}
 .home-content .media-boxes .media-box{margin:5px 11px 0 0;}
 .home-content .media-boxes .media-box:last-child{margin-right:0;}
-.home-content .media-box header{height:9.5em;border-top-color:#fb493c}
+.home-content .media-box header{height:9.5em;}
 .home-content .media-box header h5{color:#fb493c;font-size:0.75em;font-weight:bold;}
 
 .site-footer{background:none;border:0 none;height:auto;}
@@ -1032,8 +1035,8 @@ button {
 .footer-middle a{text-decoration:none;}
 .footer-middle .blog{padding-right:1.5em;color:#fb4d40}
 .footer-middle .event{padding-left:1.5em;color:#2295d2}
-.footer-top{font-family:Verdana;}
-.footer-top dl{float:left;width:32%;margin:0 11px 0 0;}
+.footer-top{;}
+.footer-top dl{float:left;margin:0 11px 0 0;}
 .footer-top dl.last{margin-right:0;}
 .footer-top dl.last dd{width:230px}
 
@@ -1045,8 +1048,139 @@ button {
 .footer-top dl dd.expanded.over{background-image:url(images/arrow-open.png)}
 .footer-top dl ul{display:none;padding:0 0 0 1em;margin:0;list-style:none;color:#b0afaf;font-size:0.75em;}
 .footer-top dl ul a{text-decoration:none;color:#b0afaf}
-#contact-us{position:relative;width:32%;margin-right:11px;float:left;}
+#contact-us{position:relative;margin-right:11px;float:left;}
 #contact-us input{display:block;margin-bottom:0.8em;width:87%;}
 #contact-us textarea{resize:none;width:87%;}
 #contact-us .defaultText{position:absolute;margin:0;top:10em;left:4px;z-index:100;color:#afadad;font-size:1em;}
-#contact-us button{margin-top:1em;padding: 0.5em 1.2em;background:#e5e5e5;border:0 none;box-shadow:none;text-shadow: none;-webkit-appearance:none;font-family:Verdana;font-size:1em;font-weight:700;}
+#contact-us button{margin-top:1em;padding: 0.5em 1.2em;background:#e5e5e5;border:0 none;box-shadow:none;text-shadow: none;-webkit-appearance:none;;font-size:1em;font-weight:700;}
+.site-footer .legal-nav ul{margin:0;}
+
+.part4-touch{display:none;background:#fff;}
+.part4-touch .item .title{margin:0;padding:0 1em;height:6em;line-height:6em;border-bottom:1px solid #dfdfdf;background:url(images/arrow-close-touch.png) 98% 50% no-repeat;color:#838383;}
+.part4-touch .item .title.over{background-image:url(images/arrow-open-touch.png)}
+.part4-touch img{padding:1.1875em 1.25em 0 0;display:inline;}
+.part4-touch .popup{display:none;padding:0.5em 0 2em;border-bottom:1px solid #dfdfdf;color:#838383;font-size:0.875em;}
+.part4-touch .popup a{background: #000;color: #fff;display: block;font-size:1em;font-weight: bold;height: 2.5em;line-height: 2.5em;margin:1.375em 0 0;text-align: center;text-decoration: none;width: 11em;}
+
+.sub-nav{display:none;}
+.sub-nav ul li:first-child{margin-left:0;}
+.sub-nav ul li a{color:#838383;}
+.sub-nav ul li a:hover,
+.sub-nav ul li.active a{color:#2295d2}
+.site-nav ul li.current-menu-parent a, 
+.site-nav ul li.current-menu-parent a:hover, 
+.site-nav ul li.current-menu-parent a:focus {background: #000 none repeat scroll 0 0;border-left: 1px solid #000;box-shadow: -2px 0 0 -1px #232323, 2px 0 0 -1px #232323;color:#fff;}
+
+.page-child .site-content{background:#fff;}
+
+@media only screen and (max-width: 1299px) {
+  .part4-notouch{display:none;}
+  .part4-touch,
+  .part4-touch .popup1{display:block;}
+  .content-container{padding:0 1.2em;}
+}
+
+@media only screen and (max-width: 960px) {
+	.full-width{padding:0 1.2em}
+	.home-content .part5{padding-top:4em}
+	.home-content .part5 ul li{float:none;width:100%;margin-right:0;}
+	.home-content .part5 dl{min-height:0px;padding:0;margin:0;}
+	.home-content .part5 dl dt{padding-bottom:0;padding-top:0.8em;background:#fff url(images/arrow-close-touch.png) 98% 50% no-repeat;}
+	.home-content .part5 dl dd{display:none;}
+	.home-content .part5 li a.more{display:none;position:static;margin:2em 0 2em 1.2em;}
+	.home-content .part5 li.over dd,
+	.home-content .part5 li.over a.more{display:block;}
+	.home-content .part5 li.over dt{padding-bottom:0.5em;background-image:url(images/arrow-open-touch.png)}
+	
+	.blog-slideshow,
+	.events-slideshow {height: 500px;position:relative;}
+		
+	.blog-slideshow > .slide ,
+	.events-slideshow > .slide{
+	  position: absolute;
+	  z-index: 0;
+	  top: 0;
+	  left: 0%;
+	  margin:0;
+	  width: 100%;
+	  height: 100%;
+	  opacity: 0;
+	  visibility: hidden;
+	  -webkit-transform: translateZ(0);
+	  -moz-transform: translateZ(0);
+	  -ms-transform: translateZ(0);
+	  -o-transform: translateZ(0);
+	  transform: translateZ(0);
+	  -webkit-transition: opacity 0.8s ease-in-out;
+	  -moz-transition: opacity 0.8s ease-in-out;
+	  -ms-transition: opacity 0.8s ease-in-out;
+	  -o-transition: opacity 0.8s ease-in-out;
+	  transition: opacity 0.8s ease-in-out;
+	}
+	.blog-slideshow > .slide.active,
+	.events-slideshow > .slide.active{
+	  opacity: 1;
+	  visibility: visible;
+	}
+	
+	.blog-slideshow nav,
+	.events-slideshow nav{display:none;}
+	
+	.blog-slideshow .image-frame img{}
+	.blog-slideshow .prev,
+	.blog-slideshow .next,
+	.events-slideshow .prev,
+	.events-slideshow .next{position:absolute;top:58%;left:-0.6em;width:1.2em;height:3.63em;background:#c3c3c3 url(images/left-arrow.png) 50% 50% no-repeat;z-index:99}
+	
+	.events-slideshow .prev,
+	.events-slideshow .next{top:34%}
+	
+	.blog-slideshow .next,
+	.events-slideshow .next{left:auto;right:-0.6em;background-image:url(images/right-arrow.png)}
+	
+	.blog-slideshow .prev:hover,
+	.blog-slideshow .next:hover,
+	.events-slideshow .prev:hover,
+	.events-slideshow .next:hover{background-color:#fb493c}
+	
+	.home-content .part7 li .join{margin-top:2em}
+	.home-content .part7 li .intro{}
+	
+	#contact-us,.footer-top dl{float:none;margin:0;}
+	#contact-us input,
+	#contact-us textarea{width:100%;}
+	#contact-us .defaultText{left:0.2em;top:8.1em;}
+	.footer-top dl {margin-top:2em;padding-top:0.5em;border-top:1px solid #dfdfdf;}
+	.footer-top dl.last{margin:0;}
+	.footer-top dl dt{background:url(images/arrow-close-touch.png) 98% 50% no-repeat;}
+	.footer-top dl dt.over{background-image:url(images/arrow-open-touch.png)}
+	.footer-top dl dd{display:none;}
+}
+@media only screen and (max-width: 769px) {
+	.site-nav ul li.current-menu-parent{display:block;}
+	.sub-nav ul li:first-child{margin-left:17px;}
+}
+@media only screen and (max-width: 425px) {
+	.ms-bullets.ms-dir-h{display:none !important}
+	.home-content .part1 h2,
+	.home-content .part1 h4{font-size:1.625em;}
+	.home-content .part1 h3{font-size:1.25em;}
+	.home-content .part3{font-size:1.2em;}
+}
+@media only screen and (max-width: 375px) {
+	.events-slideshow .prev,
+	.events-slideshow .next{top:37%}	
+}
+@media only screen and (max-width: 320px) {
+		.media-boxes .media-box{max-width:100%;margin:5px 0;}
+		.home-content .part3{height:10em;line-height:10em;font-size:1em;}
+}
+
+
+
+
+
+
+
+
+
