--- a/wp-content/themes/saatchi/style.css
+++ b/wp-content/themes/saatchi/style.css
@@ -985,7 +985,7 @@ button {
 .home-content .part4 .item.over .circle-inner{background:none;}
 .home-content .part5{padding-top:5.625em;background:#fff;}
 .home-content .part5 ul,
-.home-content .part7 ul{list-style:none;margin:0;padding:0;}
+ul.events{list-style:none;margin:0;padding:0;}
 .home-content .part5 ul li{float:left;margin:0 11px 1.5em 0;width:32%;border-top: 0.3em solid #2295d2;}
 .home-content .part5 ul li.item3,
 .home-content .part5 ul li.item6{margin-right:0;}
@@ -1009,18 +1009,19 @@ button {
 .home-content .part7 h4{margin:0px 0 10px;font-size:1.75em;}
 
 .home-content .part7{padding-top:10px;background:#fff}
-.home-content .part7 li{float:left;padding-top:20px;margin:0 11px 1.5em 0;border-top: 0.3em solid #fb493c;}
+.events li{float:left;padding-top:20px;margin:5px;border-top: 0.3em solid #fb493c;}
+.home-content .part7 li{margin:0 11px 1.5em 0;}
 .home-content .part7 li.item3{margin-right:0;}
-.home-content .part7 li header {position:relative;padding:0px 25px;height:4.6em;}
-.home-content .part7 li h2{font-size: 1.125em;font-weight: 400;height: 2.6em;line-height: 1.3em;margin: 0.5em 0 0;max-width: 85%;overflow:hidden;}
-.home-content .part7 li h3{margin-top:0.5em;font-size:0.875em;padding-bottom:1.5em; border-bottom: 1px solid #ddd;}
-.home-content .part7 li header::after{border-color: #fff transparent transparent;border-image: none;border-style: solid;border-width: 0.8em;content: "";position: absolute;top: 100%;left:2em;}
-.home-content .part7 li .content{padding:10px 25px 40px;background:#f7f7f7;;}
-.home-content .part7 li .join{display:block;margin:3.437em auto 0;width:150px;height:40px;line-height:40px;background:#000;text-align:center;color:#fff;font-size:1em;font-weight:bold;text-decoration:none;}
-.home-content .part7 li .post-on{margin-bottom:0;color:#fb493c;font-size:0.75em;font-weight:700;}
-.home-content .part7 li .intro{height:7.8em;overflow:hidden;color:#676767;font-size:0.875em;}
+.events li header {position:relative;padding:0px 25px;height:4.6em;}
+.events li h2{font-size: 1.125em;font-weight: 400;height: 2.6em;line-height: 1.3em;margin: 0.5em 0 0;max-width: 85%;overflow:hidden;}
+.events li h3{margin-top:0.5em;font-size:0.875em;padding-bottom:1.5em; border-bottom: 1px solid #ddd;}
+.events li header::after{border-color: #fff transparent transparent;border-image: none;border-style: solid;border-width: 0.8em;content: "";position: absolute;top: 100%;left:2em;}
+.events li .content{padding:10px 25px 40px;background:#f7f7f7;;}
+.events li .join{display:block;margin:3.437em auto 0;width:150px;height:40px;line-height:40px;background:#000;text-align:center;color:#fff;font-size:1em;font-weight:bold;text-decoration:none;}
+.events li .post-on{margin-bottom:0;color:#fb493c;font-size:0.75em;font-weight:700;}
+.events li .intro{height:7.8em;overflow:hidden;color:#676767;font-size:0.875em;}
 
-.home-content .part7 li .intro,
+.events .intro,
 .media-box header .intro{max-width:100%;word-break:break-all;word-wrap:break-word;}
 
 .media-box header{border-top-color:#fb493c}
@@ -1072,6 +1073,15 @@ button {
 .site-nav ul li.current-menu-parent a:focus {background: #000 none repeat scroll 0 0;border-left: 1px solid #000;box-shadow: -2px 0 0 -1px #232323, 2px 0 0 -1px #232323;color:#fff;}
 
 .page-child .site-content{background:#fff;}
+.inset{padding:0.5em 0 0.8em;}
+.primary-content .entry-content{word-break:break-all;word-wrap:break-word;}
+.primary-content .entry-header h1 {color: #1c1c1c;font-size: 1.7em;line-height: 1em;margin: 0;padding: 0.411765em 0;position: relative;}
+.primary-content .entry-meta{position: relative;padding:0 0 0.411765em;}
+.primary-content .entry-meta .posted-on {color: #d4d4d4;font-family: Verdana,sans-serif;font-size: 0.75em;font-weight: normal;}
+.news .primary-content .entry-meta::after {background: #fbbc2a none repeat scroll 0 0;bottom: -1px;content: "";height: 2px;left: 0;position: absolute;width: 2.8em;}
+
+
+
 
 @media only screen and (max-width: 1299px) {
   .part4-notouch{display:none;}
